--- a/_includes/alttitle.html
+++ b/_includes/alttitle.html
@@ -1,4 +1,4 @@
 
 	<div class="page slice">
-		<h1 class="page_title branded"><img class="pinkslash"src="/images/pinkslash.svg">{{ page.title }}</h1>
+		<h1 class="page_title branded"><img class="pinkslash"src="{{site.baseurl}}/images/pinkslash.svg">{{ page.title }}</h1>
 	</div>
