--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,18 +4,18 @@
 
 <div class ="ui two column centered grid">
 <div class="column">
-	<div id="mainlogo" class="logo item"><a href="/"><img class="ui tiny image" src="/images/logo.svg"></a></div> 
+	<div id="mainlogo" class="logo item"><a href="{{site.baseurl}}/"><img class="ui tiny image" src="{{site.baseurl}}/images/logo.svg"></a></div> 
 
 <div class = "ui list">
 <div class="item"><h3>Who We Are</h3></div>
-<div class="item"><a href="/about">About us</a></div>
-<div class="item"><a href="/team">Meet the team</a></div>
-<div class="item"><a href="/careers">Work with us</a></div>
+<div class="item"><a href="{{site.baseurl}}/about">About us</a></div>
+<div class="item"><a href="{{site.baseurl}}/team">Meet the team</a></div>
+<div class="item"><a href="{{site.baseurl}}/careers">Work with us</a></div>
 <div class="ui item"><h3>What We Do</h3></div>
 <div class="item">Services</div>
 <div class="item">Projects</div>
 <div class="item">Resources</div>
-<div class="ui item"><h3><a href="/blog">Blog</a></h3></div>
+<div class="ui item"><h3><a href="{{site.baseurl}}/blog">Blog</a></h3></div>
 
 </div>
 
@@ -29,16 +29,16 @@ Washington DC 20005, USA
 <br> <br>
 <a href="http://twitter.com/simlab" class="pink backed">Follow us on Twitter! (@simlab)</a> <br>
 <br>
-<a href="#" class="pink backed">Sign up for our TinyLetter!</a>
+<a href="{{site.baseurl}}#" class="pink backed">Sign up for our TinyLetter!</a>
 
 <br> <br>
 
-<a href="mailto:hello@simlab.org" class="pink backed">Email us! (hello@simlab.org)</a>
+<a href="{{site.baseurl}}mailto:hello@simlab.org" class="pink backed">Email us! (hello@simlab.org)</a>
 
 <br><br>
 The Social Impact Lab Foundation (SIMLab) is a 501(c)(3) organization registered in California. <br><br>
 
-&copy; SIMLab. SIMLab-authored content is available under a <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC-BY-SA-NC 4.0 License</a>, unless otherwise noted.
+&copy; SIMLab. SIMLab-authored content is available under a <a href="{{site.baseurl}}https://creativecommons.org/licenses/by-nc-sa/4.0/">CC-BY-SA-NC 4.0 License</a>, unless otherwise noted.
 
 </div>
 </div>
