--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,24 +6,24 @@
 
 <div class="ui fluid">
 
-	<div id="mainlogo" class="logo item"><a href="/"><img class="ui tiny image" src="/images/logo.svg"></a></div> 
+	<div id="mainlogo" class="logo item"><a href="{{site.baseurl}}/"><img class="ui tiny image" src="{{site.baseurl}}/images/logo.svg"></a></div> 
 	<div class="ui simple dropdown item">Who We Are
 		<div class="ui menu">
-			    <a class="item" href="/about">About us</a>
-       		<a class="item" href="/team">Meet the team</a>
-        	<a class="item" href="/careers">Work with us</a>
+			    <a class="item" href="{{site.baseurl}}/about">About us</a>
+       		<a class="item" href="{{site.baseurl}}/team">Meet the team</a>
+        	<a class="item" href="{{site.baseurl}}/careers">Work with us</a>
         </div>
     </div>
 
     <div class="ui simple dropdown item">What We Do
 		<div class="ui menu">
-			    <a class="item" href="/services">Services</a>
-       		<a class="item" href="/projects">Projects</a>
-        	<a class="item" href="/resources">Resources</a>
+			    <a class="item" href="{{site.baseurl}}/services">Services</a>
+       		<a class="item" href="{{site.baseurl}}/projects">Projects</a>
+        	<a class="item" href="{{site.baseurl}}/resources">Resources</a>
         </div>
     </div>
 
-    <a class="ui item" href="/blog">Blog</a>
+    <a class="ui item" href="{{site.baseurl}}/blog">Blog</a>
 
 
 
