--- a/_includes/title.html
+++ b/_includes/title.html
@@ -2,7 +2,7 @@
 <div class="container">
  <h1 class="page_title blogpost branded">{{page.title}}</h1>
  {% if page.image %}
- <img class="topper" src="/images/{{page.image}}" width="100%">
+ <img class="topper" src="{{site.baseurl}}/images/{{page.image}}" width="100%">
  {% endif %}
-    {% if page.author %}<h2 class="meta">{% if page.author %} <a class="pageauthorblog" href="/team#{{name.first | downcase}}">{{ page.author }}</a> | {% endif %}{% if page.meta %}{{ page.meta }}{% endif %}{{ page.date | date: "%b %-d, %Y" }}</h2>{% endif %}
+    {% if page.author %}<h2 class="meta">{% if page.author %} <a class="pageauthorblog" href="{{site.baseurl}}/team#{{name.first | downcase}}">{{ page.author }}</a> | {% endif %}{% if page.meta %}{{ page.meta }}{% endif %}{{ page.date | date: "%b %-d, %Y" }}</h2>{% endif %}
 </div>
