--- a/_layouts/newdefault.html
+++ b/_layouts/newdefault.html
@@ -5,7 +5,7 @@
 
     <body>
 {%if page.image%}
-   <div class="special topper" style="background-image: url(/images/{{page.image}});'">
+   <div class="special topper" style="background-image: url({{site.baseurl}}/images/{{page.image}});'">
 {%else%}
 <div class="topper">
 {%endif%}
@@ -26,7 +26,7 @@
   {%if page.role%}<h2 class=""><span class="subtitle smoke">{{page.role}}</span></h2>{%endif%}
 {%endif%}
 
-    <!-- {% if page.author %}<h2 class="subtitle smoke">{% if page.author %} <a class="white" href="/team#{{name.first | downcase}}">{{ page.author }}</a> | {% endif %}{% if page.meta %}{{ page.meta }}{% endif %}{{ page.date | date: "%b %-d, %Y" }}</h2>{% endif %}-->
+    <!-- {% if page.author %}<h2 class="subtitle smoke">{% if page.author %} <a class="white" href="{{site.baseurl}}/team#{{name.first | downcase}}">{{ page.author }}</a> | {% endif %}{% if page.meta %}{{ page.meta }}{% endif %}{{ page.date | date: "%b %-d, %Y" }}</h2>{% endif %}-->
 	</div>
    </div>
 {% else %}
