--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -6,7 +6,7 @@ layout: page
 <div class="item"><h3>Partners: <span class="pink">{{page.partner}}</span></h3></div>
 <div class="item"><h3>Funder: <span class="pink">{{page.funder}}</span></h3></div>
 <div class="item"><h3>Status: <span class="pink">{{page.status | capitalize}}</span></h3></div>
-<div class="item"><h3>Project Lead: <a href="/team/{{name.first}}" class="pink"><span class="pink">{{page.lead}}</span></a></h3></div>
+<div class="item"><h3>Project Lead: <a href="{{site.baseurl}}/team/{{name.first}}" class="pink"><span class="pink">{{page.lead}}</span></a></h3></div>
 </div>
 
 <h2>What we{%if page.status == 'active'%}'re doing{%elsif page.status == 'completed'} did{%elsif page.status == 'aspiration'%}'d like to do{%endif%}</h2>
@@ -23,10 +23,10 @@ layout: page
 			{%assign haspost = 'first'%}
 			<h2>Posts about this project</h2>
 		{%endif%}
-		<h3 class="pink"><a href="{{post.url}}">{{post.title}}{% if post.subtitle %}: {{post.subtitle}}{%endif%}</a></h3>
+		<h3 class="pink"><a href="{{site.baseurl}}{{post.url}}">{{post.title}}{% if post.subtitle %}: {{post.subtitle}}{%endif%}</a></h3>
 	{%endif%}
 {%endfor%}
 
 
-<p><a class="pink" href="/projects">&lt; Projects</a></p>
+<p><a class="pink" href="{{site.baseurl}}/projects">&lt; Projects</a></p>
 
