--- a/_layouts/special.html
+++ b/_layouts/special.html
@@ -6,14 +6,14 @@
 
     <body>
 
-   <div class="special topper" style="background-image: url(/images/{{feature.image}});'">
+   <div class="special topper" style="background-image: url({{site.baseurl}}/images/{{feature.image}});'">
    {% include header.html %}
 
 
    <div class="container">
    	<div id="topper_content">
-	<h1 class="smoke"><a class="white" href="{{feature.url}}">{{feature.h1}}</a></h1>
-	<h2 class="subtitle smoke"><a class="white"href="{{feature.url}}">{{feature.h2}} &gt;&gt;</a></h2>
+	<h1 class="smoke"><a class="white" href="{{site.baseurl}}{{feature.url}}">{{feature.h1}}</a></h1>
+	<h2 class="subtitle smoke"><a class="white"href="{{site.baseurl}}{{feature.url}}">{{feature.h2}} &gt;&gt;</a></h2>
 	</div>
    </div>
     </div>
