--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,23 +5,23 @@
     <meta name="viewport" content="width=device-width">
     <link rel="icon" type="image/png" href="{{site.baseurl}}/images/favicon.png">
     <meta name="description" content="{{ site.description }}">
-    <link rel="canonical" href="{{site.baseurl}}{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <meta property="og:title" content="{% if page.title %}{{ page.title }}{% endif %}" />
     <meta property="og:site_name" content="{{site.title}}">
     <meta property="og:type"content="website" />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{site.baseurl}}{{ "/css/normalize.css" | prepend: site.baseurl }}">
-     <link rel="stylesheet" href="{{site.baseurl}}{{ "/css/semantic.min.css" | prepend: site.baseurl }}">
-     <link rel="stylesheet" href="{{site.baseurl}}{{ "/css/dropdown.min.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/normalize.css" | prepend: site.baseurl }}">
+     <link rel="stylesheet" href="{{ "/css/semantic.min.css" | prepend: site.baseurl }}">
+     <link rel="stylesheet" href="{{ "/css/dropdown.min.css" | prepend: site.baseurl }}">
 
-      <link rel="stylesheet" href="{{site.baseurl}}{{ "/css/simlab.css" | prepend: site.baseurl }}">
+      <link rel="stylesheet" href="{{ "/css/simlab.css" | prepend: site.baseurl }}">
 <!-- Javascript -->
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
 
- <script src="{{site.baseurl}}{{ "/javascript/semantic.min.js" | prepend: site.baseurl }}"></script>
- <script src="{{site.baseurl}}{{ "/javascript/typeahead.bundle.min.js" | prepend: site.baseurl }}"></script>
+ <script src="{{ "/javascript/semantic.min.js" | prepend: site.baseurl }}"></script>
+ <script src="{{ "/javascript/typeahead.bundle.min.js" | prepend: site.baseurl }}"></script>
 
 {%include tracking.html%}
 
