--- a/_layouts/newdefault.html
+++ b/_layouts/newdefault.html
@@ -13,7 +13,7 @@
 
 {%if page.image %}
    <div class="container">
-   	<div id="topper_content">
+   	<div class="topper_content">
 {% if page.categories contains 'blog'%}
 	{%if page.subtitle%}
   <h1 class="title smoke">{{page.title}}</h1>
