--- a/_layouts/special.html
+++ b/_layouts/special.html
@@ -5,19 +5,47 @@
   {% include head.html %}
 
     <body>
-
-   <div class="special topper" style="background-image: url({{site.baseurl}}/images/{{feature.image}});'">
+<!--first top-->
+   <div class="home special topper" style="background-image: url({{site.baseurl}}/images/{{feature.image}});'">
    {% include header.html %}
 
 
    <div class="container">
-   	<div id="topper_content">
-	<h1 class="smoke"><a class="white" href="{{site.baseurl}}{{feature.url}}">{{feature.h1}}</a></h1>
-	<h2 class="subtitle smoke"><a class="white"href="{{site.baseurl}}{{feature.url}}">{{feature.h2}} &gt;&gt;</a></h2>
+   	<div class="home topper_content">
+      	<h1><span class="pink backed">We are SIMLab.</span></h1>
+      	<h2 class="subtitle white backed"><span class="">We use inclusive technology to help organizations make systems and services more accessible, responsive, and resilient.</span></h2>
 	</div>
    </div>
     </div>
-   
+  <!--  
+<div class="ui horizontal divider"></div>
+ <div class="home special small topper" style="background-image: url({{site.baseurl}}/images/odisha.jpg);'">
+
+   <div class="container">
+    <div class="topper_content">
+        <h2 class="subtitle smoke"><a class="white" href="/projects"><span class="pink backed">We build projects</span> with partners and donors around the world.</a></h2>
+  </div>
+   </div>
+    </div>
+
+ <div class="home special small topper" style="background-image: url({{site.baseurl}}/images/{{feature.image}});'">
+
+   <div class="container">
+    <div class="topper_content">
+        <h2 class="subtitle smoke"><a class="white" href="/services"><span class="pink backed">We help organizations</span> navigate the human side of technology.</a></h2>
+  </div>
+   </div>
+    </div>
+ <div class="home special small topper" style="background-image: url({{site.baseurl}}/images/dcpl.jpg);'">
+
+   <div class="container">
+    <div class="topper_content">
+        <h2 class="subtitle smoke"><a class="white" href="/services"><span class="pink backed">We develop resources</span> and toolkits to help learning reach everyone.</a></h2>
+  </div>
+   </div>
+    </div>
+
+-->
 <div class="ui one column page grid" id="primary">
 <div class="column">
 <div class="main container">
