--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
 
 	<div id="mainlogo" class="logo item"><a href="{{site.baseurl}}/"><img class="ui tiny image" src="{{site.baseurl}}/images/logo.svg"></a></div> 
 	<div class="ui simple dropdown item">Who We Are
-		<div class="ui menu">
+		<div class="ui borderless menu">
 			    <a class="item" href="{{site.baseurl}}/about">About us</a>
        		<a class="item" href="{{site.baseurl}}/team">Meet the team</a>
         	<a class="item" href="{{site.baseurl}}/careers">Work with us</a>
@@ -16,7 +16,7 @@
     </div>
 
     <div class="ui simple dropdown item">What We Do
-		<div class="ui menu">
+		<div class="ui borderless menu">
 			    <a class="item" href="{{site.baseurl}}/services">Services</a>
        		<a class="item" href="{{site.baseurl}}/projects">Projects</a>
         	<a class="item" href="{{site.baseurl}}/resources">Resources</a>
