--- a/_layouts/newspecial.html
+++ b/_layouts/newspecial.html
@@ -6,19 +6,22 @@
 
     <body>
 <!--first top-->
-   <div class="home special topper" style="background-image: url({{site.baseurl}}/images/{{feature.image}});'">
+   <div class="home special topper" style="background-image: url({{site.baseurl}}/images/testimage2.jpg);'">
+   <div class="smoke">
    {% include header.html %}
 
 
    <div class="container">
-   	<div class="home topper_content">
-      	<h1><span class="pink backed">We are SIMLab.</span></h1>
-      	<h2 class="subtitle white backed"><span class="">We use inclusive technology to help organizations make systems and services more accessible, responsive, and resilient.</span></h2>
+   	<div class="home topper_content alternate">
+      	<h1><span class="white">We are Simlab.</span></h1>
+      	<h2 class="subtitle white"><span class="">We help people use technology to reduce inequality.</span></h2>
        <div class="home buttons"> 
-       <a class="ui huge inverted button" href="/projects">We build projects with partners and donors around the world. </a><br><br>
-        <a class="ui huge inverted button" href="/services">We help organizations navigate the human side of technology. </a><br><br>
-        <a class="ui huge inverted button" href="/resources">We develop resources to spread learning everywhere.</a></div>
+       <a class="ui huge inverted button" href="/projects">Projects</a>
+      <a class="ui huge inverted button" href="/services">Services </a>
+       <a class="ui huge inverted button" href="/services">Resources</a>
 
+       </div>
+</div>
 
 	</div>
    </div>
