--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 <div class="column">
 <div class="container">
 
-<div class ="ui two column centered grid">
+<div class ="ui two column stackable centered grid">
 <div class="column">
 	<div id="mainlogo" class="logo item"><a href="{{site.baseurl}}/"><img class="ui tiny image" src="{{site.baseurl}}/images/logo.svg"></a></div> 
 
