--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 
 <div class="ui fluid">
 
-	<div id="mainlogo" class="logo item"><a href="{{site.baseurl}}/"><img class="ui tiny image" src="{{site.baseurl}}/images/logo.svg"></a></div> 
+	<div id="mainlogo" class="logo item"><!--<a href="{{site.baseurl}}/">--><img class="ui tiny image" src="{{site.baseurl}}/images/logo.svg"><!--</a>--></div> 
 	<div class="ui simple dropdown item">Who We Are
 		<div class="ui borderless menu">
 			    <a class="item" href="{{site.baseurl}}/about">About us</a>
