--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,8 @@
 
 <div class="ui fluid">
 
-	<div id="mainlogo" class="logo item"><!--<a href="{{site.baseurl}}/">--><img class="ui tiny image" src="{{site.baseurl}}/images/logo.svg"><!--</a>--></div> 
-	<div class="ui simple dropdown item">Who We Are
+	<div id="mainlogo" class="logo item"><a href="{{site.baseurl}}/"><img class="ui tiny image" src="{{site.baseurl}}/images/logo.svg"></a></div> 
+	<!--<div class="ui simple dropdown item">Who We Are
 		<div class="ui borderless menu">
 			    <a class="item" href="{{site.baseurl}}/about">About us</a>
        		<a class="item" href="{{site.baseurl}}/team">Meet the team</a>
@@ -23,7 +23,10 @@
         </div>
     </div>
 
-    <a class="ui item" href="{{site.baseurl}}/blog">Blog</a>
+    <a class="ui item" href="{{site.baseurl}}/blog">Blog</a>-->
+  <div class = "right menu">
+    <div class = "ui item" id="menuholder"><i id="menuburger" class="fa fa-bars fa-2"></i></div>
+  </div>
 
 
 
