--- a/_layouts/newspecial.html
+++ b/_layouts/newspecial.html
@@ -5,7 +5,8 @@
   {% include head.html %}
 
     <body>
-    {%include modalmenu.html%}
+        {%include modalmenu.html%}
+
 <!--first top-->
    <div class="home special topper" style="background-image: url({{site.baseurl}}/images/testimage2.jpg);'">
    <div class="smoke">
@@ -75,15 +76,16 @@
 $('.ui.dropdown')
   .dropdown()
 ;
+
 $('.ui.basic.modal')
   .modal()
 ;
 
 
-
-  $("#mainlogo").on("click", function(e){
+  $("#menuholder").on("click", function(e){
     $('.ui.basic.modal').modal('show')
   })
+
 </script>
     </body>
 </html>
