--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="{{ "/css/normalize.css" | prepend: site.baseurl }}">
      <link rel="stylesheet" href="{{ "/css/semantic.min.css" | prepend: site.baseurl }}">
      <link rel="stylesheet" href="{{ "/css/dropdown.min.css" | prepend: site.baseurl }}">
+     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
       <link rel="stylesheet" href="{{ "/css/simlab.css" | prepend: site.baseurl }}">
 <!-- Javascript -->
