--- a/_layouts/newspecial.html
+++ b/_layouts/newspecial.html
@@ -19,9 +19,9 @@
       	<h1><span class="white">We are Simlab.</span></h1>
       	<h2 class="subtitle white"><span class="">We help people use technology to reduce inequality.</span></h2>
        <div class="home buttons">
-       <a class="ui huge inverted button" href="/projects">Projects</a>
-      <a class="ui huge inverted button" href="/services">Services </a>
-       <a class="ui huge inverted button" href="/services">Resources</a>
+       <a class="ui huge inverted button" href="{{site.baseurl}}/projects">Projects</a>
+      <a class="ui huge inverted button" href="{{site.baseurl}}/services">Services </a>
+       <a class="ui huge inverted button" href="{{site.baseurl}}/services">Resources</a>
 
        </div>
 </div>
