--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
 
 </div>
 
-<div class="column">
+<div class="column right align">
 <h2><span class="pink backed">Social Impact Lab</span></h2>
 
 1110 Vermont Ave NW, Ste. 500 <br>
