--- a/_includes/modalmenu.html
+++ b/_includes/modalmenu.html
@@ -1,8 +1,11 @@
 
 <div class = "ui basic modal">
+
   <div class="content">
     <div class="container">
-    <h2 class="subtitle"><span class="pink backed">Simlab</span></h2>
+      <div class="right menu"><div class="item"><i id="menuclose" class="white fa fa-times fa-2"></i></div></div>
+
+    <h2 class="subtitle"><span class="pink backed">Simlab</span> </h2>
       <div class = "ui white list">
         <div class="item"><h3>Who We Are</h3></div>
           <div class="item"><a href="{{site.baseurl}}/about">About us</a></div>
@@ -17,4 +20,3 @@
     </div>
   </div>
 </div>
-
