--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,4 @@
-<div class="ui one column page grid" id="footer">
-<div class="column">
+<div id="footer">
 <div class="container">
 
 <div class ="ui two column stackable centered grid">
@@ -21,7 +20,7 @@
 
 </div>
 
-<div class="column right align">
+<div class="column align">
 <h2><span class="pink backed">Social Impact Lab</span></h2>
 
 1110 Vermont Ave NW, Ste. 500 <br>
@@ -38,7 +37,6 @@ Washington DC 20005, USA
 <br><br>
 &copy; SIMLab. SIMLab-authored content is available under a <a href="{{site.baseurl}}https://creativecommons.org/licenses/by-nc-sa/4.0/">CC-BY-SA-NC 4.0 License</a>, unless otherwise noted.
 
-</div>
 </div>
 </div>
 </div>
