--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,14 +21,14 @@
 </div>
 
 <div class="column align">
-<h2><span class="pink backed">Social Impact Lab</span></h2>
+<h2><span class="pink backed">SIMLab</span></h2>
 
 1110 Vermont Ave NW, Ste. 500 <br>
 Washington DC 20005, USA
 <br> <br>
 <a href="http://twitter.com/simlab" class="pink backed">Follow us on Twitter! (@simlab)</a> <br>
 <br>
-<a href="{{site.baseurl}}#" class="pink backed">Sign up for our newsletter!</a>
+<a href="https://tinyletter.com/simlab" class="pink backed">Sign up for our newsletter!</a>
 
 <br> <br>
 
