--- a/_includes/modalmenu.html
+++ b/_includes/modalmenu.html
@@ -5,7 +5,7 @@
     <div class="container">
       <div class="right menu"><div class="item"><i id="menuclose" class="white fa fa-times fa-2"></i></div></div>
 
-    <h2 class="subtitle"><span class="pink backed">Simlab</span> </h2>
+    <h2 class="subtitle"><span class="pink backed">SIMLab</span> </h2>
       <div class = "ui white list">
         <div class="item"><h3>Who We Are</h3></div>
           <div class="item"><a href="{{site.baseurl}}/about">About us</a></div>
