--- a/_layouts/newdefault.html
+++ b/_layouts/newdefault.html
@@ -1,64 +1,61 @@
 <!DOCTYPE html>
 <html>
-
   {% include head.html %}
-
-    <body>
+  <body>
     {%include modalmenu.html%}
 
-{%if page.image%}
-   <div class="special topper" style="background-image: url({{site.baseurl}}/images/{{page.image}});'">
-   <div class="smoke">
-  {%else%}
-<div class="topper">
-{%endif%}
-   {% include header.html %}
+    {%if page.image%}
+      <div class="special topper" style="background-image: url({{site.baseurl}}/images/{{page.image}});'">
+      <div class="smoke {%if page.categories contains 'staff'%} clear {%endif%}">
+    {%else%}
+      <div class="topper">
+    {%endif%}
 
-{%if page.image %}
-   <div class="container">
-   	<div class="topper_content">
-{% if page.categories contains 'blog'%}
-	{%if page.subtitle%}
-  <h1 class="title">{{page.title}}</h1>
-  <h2 class="white subtitle">{{page.subtitle}}</h2>
-  {%else%}
-  <h1 class="long title">{{page.title}}</h1>
-  {%endif%}
-{%else%}
-  <h1 class="title">{{page.title}}</h1>
-  {%if page.role%}<h2 class=""><span class="white subtitle">{{page.role}}</span></h2>{%endif%}
-{%endif%}
+    {% include header.html %}
 
-    <!-- {% if page.author %}<h2 class="subtitle smoke">{% if page.author %} <a class="white" href="{{site.baseurl}}/team#{{name.first | downcase}}">{{ page.author }}</a> | {% endif %}{% if page.meta %}{{ page.meta }}{% endif %}{{ page.date | date: "%b %-d, %Y" }}</h2>{% endif %}-->
-	</div>
-   </div>
-{% else %}
+    {%if page.image %}
+      <div class="container">
+      <div class="topper_content">
+      {% if page.categories contains 'blog'%}
+        {% if page.subtitle %}
+          <h1 class="title">{{page.title}}</h1>
+          <h2 class="white subtitle">{{page.subtitle}}</h2>
+        {%else%}
+          <h1 class="long title">{{page.title}}</h1>
+        {%endif%}
+        {%else%}
+        <h1 class="title">{{page.title}}</h1>
+        {%if page.role%}<h2 class=""><span class="white subtitle">{{page.role}}</span></h2>{%endif%}
+      {%endif%}
 
-<div class="container">
+      <!-- {% if page.author %}<h2 class="subtitle smoke">{% if page.author %} <a class="white" href="{{site.baseurl}}/team#{{name.first | downcase}}">{{ page.author }}</a> | {% endif %}{% if page.meta %}{{ page.meta }}{% endif %}{{ page.date | date: "%b %-d, %Y" }}</h2>{% endif %}-->
+      </div>
+      </div>
+    {% else %}
+        {% if page.categories contains 'blog'%}
+          <div class="container">
 
- <h1 class="page_title blogpost branded">{{page.title}}{%if page.subtitle%}: {{page.subtitle}}{%endif%}</h1>
+          <h1 class="page_title blogpost branded">{{page.title}}{%if page.subtitle%}: {{page.subtitle}}{%endif%}</h1>
 
-</div>
-{% endif %}
+          </div>
+        {% else %}
+          <div class="container">
+            <h1 class="page_title blogpost branded hidden">{{page.title}}</h1>
+          </div>
+        {% endif %}
+    {% endif %}
 
-{%if page.image %}
-</div>
-{%endif%}
+    {%if page.image %}
+      </div>
+    {%endif%}
     </div>
 
 
-<div class="main container">
-
-
-  {{content}}
-
-</div>
-{% include footer.html %}
-
-
-{% include javascript.html %}
-
-
-{%include tracking.html%}
-    </body>
+    <div class="main container">
+    {{content}}
+    </div>
+    {% include footer.html %}
+    {% include javascript.html %}
+    {% include tracking.html %}
+  </body>
 </html>
