--- a/_layouts/newspecial.html
+++ b/_layouts/newspecial.html
@@ -8,8 +8,8 @@
         {% include header.html %}
         <div class="container">
           <div class="home topper_content alternate">
-            <h1><span class="white">We are Simlab.</span></h1>
-            <h2 class="subtitle white">We help people use technology to reduce inequality.</h2>
+            <h1><span class="white">We are SIMLab.</span></h1>
+            <h2 class="subtitle white">We help people use technology to build equality.</h2>
             <div class="home buttons">
               <a class="ui huge inverted button" href="{{site.baseurl}}/projects">Projects</a>
               <a class="ui huge inverted button" href="{{site.baseurl}}/services">Services</a>
