--- a/_layouts/newdefault.html
+++ b/_layouts/newdefault.html
@@ -23,6 +23,7 @@
         {%else%}
           <h1 class="long title">{{page.title}}</h1>
         {%endif%}
+
         {%else%}
         <h1 class="title">{{page.title}}</h1>
         {%if page.role%}<h2 class=""><span class="white subtitle">{{page.role}}</span></h2>{%endif%}
@@ -38,6 +39,13 @@
           <h1 class="page_title blogpost branded">{{page.title}}{%if page.subtitle%}: {{page.subtitle}}{%endif%}</h1>
 
           </div>
+          {% elsif page.categories contains 'projects'%}
+            <div class="container">
+
+            <h1 class="page_title blogpost branded">{{page.title}}{%if page.subtitle%}: {{page.subtitle}}{%endif%}</h1>
+
+          </div>
+
         {% else %}
           <div class="container">
             <h1 class="page_title blogpost branded hidden">{{page.title}}</h1>
@@ -46,6 +54,8 @@
     {% endif %}
 
     {%if page.image %}
+    {%if page.image_credit%}<div class="imagecredit">Image: {{page.image_credit}}</div>{%endif%}
+
       </div>
     {%endif%}
     </div>
