--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,7 +3,7 @@ layout: page
 ---
 {% assign name = page.lead | split: ' ' %}
 <div class="ui list">
-<div class="item"><h3>Partners: <span class="pink">{{page.partner}}</span></h3></div>
+<div class="item"><h3>Partners: <span class="pink">{%for partner in page.partners%}{{partner}}{%if partner != page.partners.last%},{%endif%}{%endfor%}</span></h3></div>
 <div class="item"><h3>Funder: <span class="pink">{{page.funder}}</span></h3></div>
 <div class="item"><h3>Status: <span class="pink">{{page.status | capitalize}}</span></h3></div>
 <div class="item"><h3>Project Lead: <a href="{{site.baseurl}}/team/{{name.first}}" class="pink"><span class="pink">{{page.lead}}</span></a></h3></div>
@@ -26,7 +26,3 @@ layout: page
 		<h3 class="pink"><a href="{{site.baseurl}}{{post.url}}">{{post.title}}{% if post.subtitle %}: {{post.subtitle}}{%endif%}</a></h3>
 	{%endif%}
 {%endfor%}
-
-
-<p><a class="pink" href="{{site.baseurl}}/projects">&lt; Projects</a></p>
-
