--- a/_layouts/newspecial.html
+++ b/_layouts/newspecial.html
@@ -13,7 +13,7 @@
             <div class="home buttons">
               <a class="ui huge inverted button" href="{{site.baseurl}}/projects">Projects</a>
               <a class="ui huge inverted button" href="{{site.baseurl}}/services">Services</a>
-              <a class="ui huge inverted button" href="{{site.baseurl}}/services">Resources</a>
+              <!--<a class="ui huge inverted button" href="{{site.baseurl}}/services">Resources</a>-->
             </div>
           </div>
         </div>
