--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
 <div class="ui item"><h3>What We Do</h3></div>
 <div class="item"><a href="{{site.baseurl}}/projects">Projects</a></div>
 <div class="item"><a href="{{site.baseurl}}/services">Services </a></div>
-<div class="item"><a href="{{site.baseurl}}/services">Resources</a></div>
+<!--<div class="item"><a href="{{site.baseurl}}/services">Resources</a></div>-->
 <div class="ui item"><h3><a href="{{site.baseurl}}/blog">Blog</a></h3></div>
 
 </div>
