--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,14 @@
 
 <!--Main Menu-->
+<div class="container">
+<div class="ui borderless menu">
+  <div id="mainlogo" class="logo item"><a href="{{site.baseurl}}/"><img class="ui tiny image" src="{{site.baseurl}}/images/logo.svg"></a></div>
+	
+
+</div>
+</div>
+
+<!--
 <div class="ui borderless two item main menu">
 <div class="container">
 
@@ -8,7 +17,6 @@
 
 	<div id="mainlogo" class="logo item"><a href="{{site.baseurl}}/"><img class="ui tiny image" src="{{site.baseurl}}/images/logo.svg"></a></div>
 
-	<!--	<div class="slash item"><img class="pinkslash" src="{{site.baseurl}}/images/pinkslash.svg"></div>-->
 {%if page.title%}
 		<div class="item"><h1 class="menubar page_title">
 			{% case page.categories %}
@@ -32,4 +40,4 @@
 </div>
 
 </div>
-</div>
+</div>-->
