--- a/_layouts/newdefault.html
+++ b/_layouts/newdefault.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  {% include head.html %}
+  {% include minimalhead.html %}
   <body>
     {%include modalmenu.html%}
 
@@ -65,7 +65,7 @@
     <div class="main container">
     {{content}}
     </div>
-    {% include footer.html %}
+    {% include minifooter.html %}
     {% include javascript.html %}
     {% include tracking.html %}
   </body>
