--- a/_layouts/singlepage.html
+++ b/_layouts/singlepage.html
@@ -8,10 +8,10 @@
         <div class="container">
           <div class="ui borderless menu">
             <div id="mainlogo" class="logo item"><a href="{{site.baseurl}}/"><img class="ui tiny image" src="{{site.baseurl}}/images/logo.svg"></a></div>
-              <a class="item">What We Do</a>
-              <a class="item">Selected Projects</a>
-              <a class="item">Who We Are</a>
-              <a class="item">Blog</a>
+              <a class="computer only item">What We Do</a>
+              <a class="computer only item">Selected Projects</a>
+              <a class="computer only item">Who We Are</a>
+              <a class="computer only item">Blog</a>
           </div>
           <div class="home topper_content alternate">
             <h1><span class="white">We are SIMLab.</span></h1>
@@ -24,13 +24,12 @@
 
 
     <section class="container">
-    <p class="about">SIMLab helps empower people to bridge the gap between information and action. We work with organizations to uncover and share honest, difficult stories and lessons from technology projects of all sizes, and develop insights and best practices from every sector that technology touches. We collect, crystallize, and publicly share these learnings, and help people apply these learnings through consultations, workshops, applied research, and prototypes. To get there, we combine ten years of institutional knowledge implementing technology projects in the world’s most difficult contexts with a team of subject matter experts and technologists.</p>
-    <p class="about">A 501(c)(3)-exempt organization, SIMLab helps our clients better connect with the people they serve, identify accessibility gaps in systems, and maximize the potential of technology to build societies that are equitable and inclusive. </p>
-    <p class="about"><a href="{{site.baseurl}}/about/strategy"><span class="pink backed">Read our strategy for 2015-2016.</span></a></p>
+    <p class="about">Technology can transform social change work, bridging gaps and opening doors&mdash;or it can widen the digital divide and entrench inequality. SIMLab works with organizations to use inclusive, accessible technologies, from radio to social media, from SMS to Whatsapp, to deliver services, share information, and communicate with communities. We help uncover and share honest, difficult lessons from technology projects of all sizes, and develop insights and best practices from every sector. We help people apply these learnings through consultations, workshops, applied research, and prototypes. SIMLab combines ten years of institutional knowledge implementing technology projects in the world’s most difficult contexts with a team of subject matter experts and technologists.</p>
+    <p class="about">A 501(c)(3)-exempt organization, SIMLab helps our clients better connect with the people they serve, identify accessibility gaps in systems, and maximize the potential of technology to build societies that are equitable and inclusive.</p>
     </section>
 
     <section class="">
-      <h2 style="background-image: url('/simlabrefresh/images/post_images/first-resort.jpg'); height: 300px; margin: 50px 0; padding-top:100px; color:#fff; background-attachment: fixed; background-repeat: no-repeat; background-size:cover;"><a href="{{site.baseurl}}/"><img class="ui tiny image" style="display: inline-flex; padding-bottom: 15px; margin-right: 10px;"  src="{{site.baseurl}}/images/logo.svg"></a>/ WHAT WE DO</h2>
+      <h2 style="background-image: url('/simlabrefresh/images/post_images/first-resort.jpg'); height: 300px; margin: 50px 0; padding-top:100px; color:#fff; background-attachment: fixed; background-repeat: no-repeat; background-size:cover;"><img class="ui tiny image" style="display: inline-flex; padding-bottom: 15px; margin-right: 10px;"  src="{{site.baseurl}}/images/logo.svg">/ WHAT WE DO</h2>
       <div class="ui three column stackable grid container">
         <div class="column">
           <div class="ui segment">
@@ -48,7 +47,7 @@
             <p>We collect and develop toolkits, case studies, and guides and present them on public platforms that maximize their shareability and utility to others hoping to use technology for social change.</p>
           </div>
           <div class="ui segment">
-            <h2>Inclusive Technology</h2>
+            <h2>Specification Development</h2>
             <p>We can train your team on how to use existing technologies to connect with and collect feedback from clients, and help you make sense of the data.</p>
           </div>
         </div>
@@ -68,40 +67,34 @@
 
 
     <section class="projects">
-      <h2 style="background-image: url('/simlabrefresh/images/do.jpg'); height: 250px; margin: 50px 0 0 0; padding-top:100px; color:#fff; background-attachment: fixed; background-repeat: no-repeat; background-size:cover;">SELECTED PROJECTS</h2>
-      <div class="ui equal width padded grid">
+      <h2 style="background-image: url('/simlabrefresh/images/do.jpg'); height: 250px; margin: 50px 0 30px 0; padding-top:100px; color:#fff; background-attachment: fixed; background-repeat: no-repeat; background-size:cover;"><img class="ui tiny image" style="display: inline-flex; padding-bottom: 15px; margin-right: 10px;"  src="{{site.baseurl}}/images/logo.svg">/ SELECTED PROJECTS</h2>
+<div class = "container">
+    <div class="ui three doubling link cards team">
         {% for page in site.pages%}
               <!--Project-->
          {% if page.categories contains "projects" and page.status == "active" %}
        <!--style="background-image:url({{site.baseurl}}/images/{})"-->
-      <div class="column">
-        <div class="ui dimmable image">
-          <div class="ui dimmer">
-            <div class="content">
-              <div class="center">
-                <h3><a class="white" href="{{site.baseurl}}/projects/{{page.locator}}">{{page.hook}}</a></h3>
-              </div>
-            </div>
-          </div>
-           <img class="ui image project" src="{{site.baseurl}}/images/{{page.tease}}">
-        </div>
+       <a class="card" href="{{site.baseurl}}/projects/{{page.locator}}">
+    <div class="image">
+      <img src="{{site.baseurl}}/images/{{page.tease}}">
+    </div>
+    <div class="content">
+      <div class="header">{{page.title}}</div>
+      <div class="description">
+        {{page.hook}}
       </div>
-       <!--  <div class="content">
-             <a class="header" href="{{site.baseurl}}/team/{{page.locator}}"><span class="pink backed">{{page.title}}</span></a>
-             <div class="staff meta">
-               <a href="{{site.baseurl}}/team/{{page.locator}}">{{page.funder}}</a>
-             </div>
-           </div>-->
+    </div>
+  </a>
          {%endif%}
        {% endfor %}
-
       </div>
+    </div>
     </section>
 
 
-    <section class="container team">
-      <h2>WHO WE ARE</h2>
-
+    <section class="team">
+      <h2 style="background-image: url('/simlabrefresh/images/whoweare.jpg'); height: 250px; margin: 50px 0 50px 0; padding-top:100px; color:#fff; background-attachment: fixed; background-repeat: no-repeat; background-size:cover;"><img class="ui tiny image" style="display: inline-flex; padding-bottom: 15px; margin-right: 10px;"  src="{{site.baseurl}}/images/logo.svg">/ WHO WE ARE</h2>
+<div class="container">
       <div class="ui four doubling cards team">
        {% for page in site.pages%}
              {% if page.categories contains "staff" %}
@@ -126,6 +119,7 @@
       	{% endif %}
       {% endfor %}
       <p> Don't see the job you want? Send us a CV and a letter telling us why we desperately need you to <a href="mailto:jobs@simlab.org">jobs@simlab.org</a></p>
+</div>
     </section>
 
 <!--
@@ -147,7 +141,7 @@
 
 
     <section class="blog">
-<h2 style="background-image: url('/simlabrefresh/images/blog copy.jpg'); height: 250px; margin: 50px 0 50px 0; padding-top:100px; color:#fff; background-attachment: fixed; background-repeat: no-repeat; background-size:cover;">LATEST FROM THE BLOG</h2>
+<h2 style="background-image: url('/simlabrefresh/images/blogbanner.jpg'); height: 250px; margin: 50px 0 50px 0; padding-top:100px; color:#fff; background-attachment: fixed; background-repeat: no-repeat; background-size:cover;"><img class="ui tiny image" style="display: inline-flex; padding-bottom: 15px; margin-right: 10px;"  src="{{site.baseurl}}/images/logo.svg">/ BLOG</h2>
 <div class="container">
     {%for post in site.posts limit:3%}
     <h2 class="post title"><a href="{{site.baseurl}}{{post.url}}">{{post.title}}{% if post.subtitle %}: {{post.subtitle}}{%endif%}</a></h2>
