--- a/_includes/modalmenu.html
+++ b/_includes/modalmenu.html
@@ -7,14 +7,11 @@
 
     <h2 class="subtitle"><span class="pink backed">SIMLab</span> </h2>
       <div class = "ui white list">
-        <div class="item"><h3>Who We Are</h3></div>
-          <div class="item"><a href="{{site.baseurl}}/about">About us</a></div>
-          <div class="item"><a href="{{site.baseurl}}/team">Meet the team</a></div>
-          <div class="item"><a href="{{site.baseurl}}/careers">Work with us</a></div>
-        <div class="ui item"><h3>What We Do</h3></div>
-          <div class="item"><a href="{{site.baseurl}}/services">Services</a></div>
-          <div class="item"><a href="{{site.baseurl}}/projects">Projects</a></div>
-        <!--  <div class="item"><a href="{{site.baseurl}}/resources">Resources</a></div>-->
+        <div class="item"><h3><a href="{{site.baseurl}}/about">About Us</a></h3></div>
+        <div class="item"><h3><a href="{{site.baseurl}}/team">Who We Are</a></h3></div>
+        <div class="item"><h3><a href="{{site.baseurl}}/services">Our Services</a></h3></div>
+        <div class="item"><h3><a href="{{site.baseurl}}/projects">Selected Projects</a></h3></div>
+        <div class="item"><h3><a href="{{site.baseurl}}/resources">Resources</a></h3></div>
         <div class="ui item"><h3><a href="{{site.baseurl}}/blog">Blog</a></h3></div>
       </div>
     </div>
