--- a/_layouts/newdefault.html
+++ b/_layouts/newdefault.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  {% include minimalhead.html %}
+  {% include head.html %}
   <body>
     {%include modalmenu.html%}
 
@@ -66,7 +66,17 @@
     {{content}}
     </div>
     {% include minifooter.html %}
-    {% include javascript.html %}
     {% include tracking.html %}
+    <script>
+        +$('.ui.basic.modal')
+       .modal()
+        ;
+
+
+
+        $("#menuholder").on("click", function(e){
+          $('.ui.basic.modal').modal('show')
+      })
+    </script>
   </body>
 </html>
