--- a/_layouts/tufte.html
+++ b/_layouts/tufte.html
@@ -9,12 +9,18 @@
 
 
   <article>
-    <div class="participants"><img class="participant" src="{{site.baseurl}}/images/logo.svg"><img class="participant" src="{{site.baseurl}}/images/dfidcase/Picture0.png"></div>
+    <div class="participants"><a href="http://simlab.org" class="participants" style="background:none"><img class="participant" src="{{site.baseurl}}/images/logo.svg"></a>   <img class="participant" src="{{site.baseurl}}/images/dfidcase/Picture0.png">
+</div>
     <h1>{{page.title}}</h1>
     <p class="subtitle">{{page.author}}</p>
     {{content}}
   </article>
 
+  <div class="footer">
+
+  	<p>	<a href="http://twitter.com/simlab" class="pink">@SIMLab</a> | <a href="mailto:hello@simlab.org" class="">hello@simlab.org</a><br>
+  		Washington | New York | London | Nairobi</p>
+  </div>
 </body>
 
 
