--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,7 @@
       {% if site.show_social_icons %}
         {% include social_links.html %}
       {% endif %}
-      Washington | New York | London | Nairobi <br>
-      SIMLab
+      Washington | New York | London | Nairobi
     </small>
 
   </div>
